--- a/index.html
+++ b/index.html
@@ -4,10 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+
+    <!-- custom fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- add the stylesheet -->
+    <link rel="stylesheet" href="style.css" />
 
     <title>Frontend Mentor | Product preview card component</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <article class="product">
+        <picture class="product__img">
+          <img
+            src="./images/image-product-mobile.jpg"
+            alt="Gabriella Essense perfume bottle laying flat on a table"
+          />
+        </picture>
+
+        <div class="product__content">
+          <div class="product__category">preview</div>
+
+          <h1 class="product__title">Gabrielle Essence Eau De Parfum</h1>
+
+          <p>
+            A floral, solar and voluptuous interpretation composed by Olivier Polge,
+            Perfumer-Creator for the House of CHANEL.
+          </p>
+
+          <div class="flex-group">
+            <div class="product__price">$149.99</div>
+            <div class="product__original-price">$169.99</div>
+          </div>
+
+          <button class="button">Add to Cart</button>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
