--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <main>
       <article class="product">
         <picture class="product__img">
+          <source
+            srcset="./images/image-product-desktop.jpg"
+            media="(min-width: 37.5em)"
+          />
+
           <img
             src="./images/image-product-mobile.jpg"
             alt="Gabriella Essense perfume bottle laying flat on a table"
@@ -40,11 +45,17 @@
           </p>
 
           <div class="flex-group">
-            <div class="product__price">$149.99</div>
-            <div class="product__original-price">$169.99</div>
+            <div class="product__price">
+              <span class="visually-hidden">Current Price:</span>
+              $149.99
+            </div>
+            <div class="product__original-price">
+              <span class="visually-hidden">Original Price:</span>
+              <s> $169.99 </s>
+            </div>
           </div>
 
-          <button class="button">Add to Cart</button>
+          <button class="button" data-icon="shopping-cart">Add to Cart</button>
         </div>
       </article>
     </main>
